--- a/tailwind.css
+++ b/tailwind.css
@@ -31,6 +31,14 @@
 }
 
 
+.roboto {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
 
 @media screen and (max-width: 576px){
     .logo{
